...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Login View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="LoginViewController" customModule="SwiftLoginApp" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
...
                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="x3c-MC-W4n">
                                <rect key="frame" x="102.5" y="298" width="209" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="tfUsername"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="52K-Mt-f9H"/>
                                    <constraint firstAttribute="width" constant="209" id="a8U-Zt-3AQ"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
...
                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JLM-Sf-91G">
                                <rect key="frame" x="102.5" y="357" width="209" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="tfPassword"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="209" id="LnN-Tw-QR0"/>
                                    <constraint firstAttribute="height" constant="30" id="llw-dC-mMc"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ge8-lp-Cgg">
                                <rect key="frame" x="137" y="411" width="140" height="60"/>
                                <accessibility key="accessibilityConfiguration" identifier="btnLogin"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="140" id="DoF-B0-Bte"/>
                                    <constraint firstAttribute="height" constant="60" id="RZb-dn-KVP"/>
                                </constraints>
                                <state key="normal" title="LoginBtn" image="Login"/>
                                <connections>
...
                    <view key="view" contentMode="scaleToFill" id="alW-O3-dEd">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="igy-jg-ZPE">
                                <rect key="frame" x="265" y="55" width="71" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="btnLogout"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="71" id="bFx-w7-DDS"/>
                                    <constraint firstAttribute="height" constant="30" id="eCn-bN-HCa"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                <state key="normal" title="Logout"/>
...
